--- a/meta.yaml
+++ b/meta.yaml
@@ -1,28 +1,24 @@
 package:
-  name: "bubbleTree"
-  version: "1.2.0"
+  name: "bubbletree"
+  version: "1.0"
 
 source:
-  git_rev: 
+  path: .
   git_url: https://github.com/aemann01/bubbleTree
 
 requirements:
-  host:
-    - python
   build:
-    - python
+    - python >=3.8
   run:
-    - python
-    - pandas
-    - biopython
-    - numpy
-    - matplotlib
-    - argparse
-    - seaborn
+    - python >=3.8
+    - pandas >=1.1.3
+    - biopython >=1.79
+    - matplotlib >=3.5.1
+    - seaborn >=0.11.0
 
 about:
   home: https://github.com/aemann01/bubbleTree
-  license: GNU
-  license_family: GNU
+  license: GPL
+  license_family: GPL
   license_file: LICENSE
   summary: "Plot a phylogenetic tree against a bubble plot or heatmap"
