--- a/meta.yaml
+++ b/meta.yaml
@@ -1,24 +1,36 @@
+{% set name = "bubbletree" %}
+{% set version = "1.1" %}
+
 package:
-  name: "bubbletree"
-  version: "1.0"
+  name: "{{ name|lower }}"
+  version: "{{ version }}"
 
 source:
-  path: .
-  git_url: https://github.com/aemann01/bubbleTree
+  url: "https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz"
+  sha256: 65f3f8cdc0f8b715060b5ad2fef0358a4b25c12eecff28c793a6c94c5360ec46
+
+build:
+  number: 0
+  script: "{{ PYTHON }} -m pip install . -vv"
 
 requirements:
-  build:
-    - python >=3.8
+  host:
+    - pip
+    - python
   run:
-    - python >=3.8
-    - pandas >=1.1.3
-    - biopython >=1.79
-    - matplotlib >=3.5.1
-    - seaborn >=0.11.0
+    - python
+
+test:
+  imports:
+    - bubbletree
 
 about:
-  home: https://github.com/aemann01/bubbleTree
-  license: GPL
-  license_family: GPL
-  license_file: LICENSE
-  summary: "Plot a phylogenetic tree against a bubble plot or heatmap"
+  home: "https://github.com/aemann01/bubbleTree"
+  license: "GNU General Public (GPL)"
+  license_family: LGPL
+  license_file:
+  summary: "Bubble plot or heatmap ordered by phylogenetic tree"
+
+extra:
+  recipe-maintainers:
+    - aemann01
